--- a/_includes/sc/intro.html
+++ b/_includes/sc/intro.html
@@ -8,6 +8,8 @@
   and task automation.
   Participants will be encouraged to help one another
   and to apply what they have learned to their own research problems.
+  
+  <i>This event is organized by the <a href="https://library.epfl.ch">EPFL Library</a>, with support from the <a href="https://cape.epfl.ch/fr/index-fr-html/">CAPE</a>.</i>
 </p>
 <p align="center">
   <em>
