--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -6,7 +6,7 @@
       <tr> <td>09:00</td>  <td>Automating Tasks with the Unix Shell</td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
       <tr> <td>12:30</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:30</td>  <td>Building Programs with Python</td> </tr>
+      <tr> <td>13:30</td>  <td>Version Control with Git</td> </tr>
       <tr> <td>15:00</td>  <td>Afternoon break</td> </tr>
       <tr> <td>16:30</td>  <td>Wrap-up</td> </tr>
       <tr> <td>17:00</td>  <td>END</td> </tr>
@@ -15,10 +15,10 @@
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Version Control with Git</td> </tr>
+      <tr> <td>09:00</td>  <td>Building Programs with Python I</td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
       <tr> <td>12:30</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:30</td>  <td>Building Programs with Python</td> </tr>
+      <tr> <td>13:30</td>  <td>Building Programs with Python II</td> </tr>
       <tr> <td>15:00</td>  <td>Afternoon break</td> </tr>
       <tr> <td>16:30</td>  <td>Wrap-up</td> </tr>
       <tr> <td>16:50</td>  <td><a href="{{ site.swc_post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop Survey</a></td> </tr>
