--- a/_includes/sc/syllabus.html
+++ b/_includes/sc/syllabus.html
@@ -37,9 +37,7 @@
       <li>Using Python from the Command Line</li>
       <li>Data Types and Type Conversion</li>
       <li>Dataframes</li>
-      <li><a href="{{site.swc_pages}}/python-novice-inflammation/reference">Reference</a> 
-        and 
-<a href="{{site.swc_pages}}/python-novice-gapminder/reference">Reference</a></li>
+      <li><a href="{{site.swc_pages}}/python-novice-inflammation/reference">Reference</a> and <a href="{{site.swc_pages}}/python-novice-gapminder/reference">Reference</a></li>
     </ul>
   </div>
 </div>
