--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -3,12 +3,30 @@
     <h3>Day 1</h3>
     <table class="table table-striped">
       <tr> <td>Before</td> <td><a href="{{ site.swc_pre_survey }}{{ site.github.project_title }}">Pre-workshop survey</a> </td> </tr>
-      <tr> <td>09:00</td>  <td>Automating Tasks with the Unix Shell</td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>12:30</td>  <td>Lunch break</td> </tr>
+      <tr> <td>09:00</td>  <td>Introduction / Automating Tasks with the Unix Shell</td> </tr>
+      <tr> <td>09:05</td>  <td>Introducing the shell</td> </tr>
+      <tr> <td>09:10</td>  <td>Navigating Files and Directories</td> </tr>
+      <tr> <td>09:40</td>  <td>Working with Files and Directories/td> </tr>
+      <tr> <td>10:20</td>  <td>Pipes and Filters and Loops</td> </tr>
+      <tr> <td>10:55</td>  <td>Morning break</td> </tr>
+      <tr> <td>11:25</td>  <td>Shell Scripts/td> </tr>
+      <tr> <td>12:00</td>  <td>Finding Things</td> </tr>
+      <tr> <td>12:25</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>11:25</td>  <td>Lunch break</td> </tr>
       <tr> <td>13:30</td>  <td>Version Control with Git</td> </tr>
-      <tr> <td>15:00</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>16:30</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>13:35</td>  <td>Setting Up Git</td> </tr>
+      <tr> <td>13:40</td>  <td>Creating a repository</td> </tr>
+      <tr> <td>13:50</td>  <td>Tracking Changes/td> </tr>
+      <tr> <td>14:10</td>  <td>Exploring History</td> </tr>
+      <tr> <td>14:35</td>  <td>Ignoring Things</td> </tr>
+      <tr> <td>14:40</td>  <td>Afternoon break</td> </tr>
+      <tr> <td>15:10</td>  <td>Remotes in Github</td> </tr>
+      <tr> <td>15:40</td>  <td>Collaborating</td> </tr>
+      <tr> <td>16:05</td>  <td>Conflicts/td> </tr>
+      <tr> <td>16:30</td>  <td>Open Science</td> </tr>
+      <tr> <td>16:40</td>  <td>Licensing and citation</td> </tr>
+      <tr> <td>16:45</td>  <td>Hosting</td> </tr>
+      <tr> <td>16:50</td>  <td>Wrap-up</td> </tr>
       <tr> <td>17:00</td>  <td>END</td> </tr>
     </table>
   </div>
@@ -16,11 +34,21 @@
     <h3>Day 2</h3>
     <table class="table table-striped">
       <tr> <td>09:00</td>  <td>Building Programs with Python I</td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
+      <tr> <td>09:05</td>  <td>Analyzing Patient Data</td> </tr>
+      <tr> <td>10:05</td>  <td>Morning break</td> </tr>
+      <tr> <td>10:35</td>  <td>Repeating Action with Loops</td> </tr>
+      <tr> <td>11:05</td>  <td>Storing Multiple Values in Lists</td> </tr>
+      <tr> <td>11:40</td>  <td>Analyzing Data From Multiple Files</td> </tr>
+      <tr> <td>12:00</td>  <td>Making Choices</td> </tr>
       <tr> <td>12:30</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:30</td>  <td>Building Programs with Python II</td> </tr>
-      <tr> <td>15:00</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>16:30</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>13:30</td>  <td>Creating Functions</td> </tr>
+      <tr> <td>14:00</td>  <td>Errors and exceptions</td> </tr>
+      <tr> <td>14:30</td>  <td>Data types and conversion</td> </tr>
+      <tr> <td>14:50</td>  <td>Afternoon break</td> </tr>
+      <tr> <td>15:20</td>  <td>reading Tabular in DataFrames/td> </tr>
+      <tr> <td>15:40</td>  <td>Panda Dataframes</td> </tr>
+      <tr> <td>16:20</td>  <td>Command-line programs</td> </tr>
+      <tr> <td>16:35</td>  <td>Wrap-up</td> </tr>
       <tr> <td>16:50</td>  <td><a href="{{ site.swc_post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop Survey</a></td> </tr>
       <tr> <td>17:00</td>  <td>END</td> </tr>
     </table>
