--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -6,7 +6,7 @@
       <tr> <td>09:00</td>  <td>Introduction / Automating Tasks with the Unix Shell</td> </tr>
       <tr> <td>09:05</td>  <td>Introducing the shell</td> </tr>
       <tr> <td>09:10</td>  <td>Navigating Files and Directories</td> </tr>
-      <tr> <td>09:40</td>  <td>Working with Files and Directories/td> </tr>
+      <tr> <td>09:40</td>  <td>Working with Files and Directories>/td> </tr>
       <tr> <td>10:20</td>  <td>Pipes and Filters and Loops</td> </tr>
       <tr> <td>10:55</td>  <td>Morning break</td> </tr>
       <tr> <td>11:25</td>  <td>Shell Scripts/td> </tr>
