--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -9,20 +9,20 @@
       <tr> <td>09:40</td>  <td>Working with Files and Directories</td> </tr>
       <tr> <td>10:20</td>  <td>Pipes and Filters and Loops</td> </tr>
       <tr> <td>10:55</td>  <td>Morning break</td> </tr>
-      <tr> <td>11:25</td>  <td>Shell Scripts/td> </tr>
+      <tr> <td>11:25</td>  <td>Shell Scripts</td> </tr>
       <tr> <td>12:00</td>  <td>Finding Things</td> </tr>
       <tr> <td>12:25</td>  <td>Wrap-up</td> </tr>
       <tr> <td>11:25</td>  <td>Lunch break</td> </tr>
       <tr> <td>13:30</td>  <td>Version Control with Git</td> </tr>
       <tr> <td>13:35</td>  <td>Setting Up Git</td> </tr>
       <tr> <td>13:40</td>  <td>Creating a repository</td> </tr>
-      <tr> <td>13:50</td>  <td>Tracking Changes/td> </tr>
+      <tr> <td>13:50</td>  <td>Tracking Changes</td> </tr>
       <tr> <td>14:10</td>  <td>Exploring History</td> </tr>
       <tr> <td>14:35</td>  <td>Ignoring Things</td> </tr>
       <tr> <td>14:40</td>  <td>Afternoon break</td> </tr>
       <tr> <td>15:10</td>  <td>Remotes in Github</td> </tr>
       <tr> <td>15:40</td>  <td>Collaborating</td> </tr>
-      <tr> <td>16:05</td>  <td>Conflicts/td> </tr>
+      <tr> <td>16:05</td>  <td>Conflicts</td> </tr>
       <tr> <td>16:30</td>  <td>Open Science</td> </tr>
       <tr> <td>16:40</td>  <td>Licensing and citation</td> </tr>
       <tr> <td>16:45</td>  <td>Hosting</td> </tr>
