--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -45,7 +45,7 @@
       <tr> <td>14:00</td>  <td>Errors and exceptions</td> </tr>
       <tr> <td>14:30</td>  <td>Data types and conversion</td> </tr>
       <tr> <td>14:50</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>15:20</td>  <td>reading Tabular in DataFrames</td> </tr>
+      <tr> <td>15:20</td>  <td>Reading Tabular in DataFrames</td> </tr>
       <tr> <td>15:40</td>  <td>Panda Dataframes</td> </tr>
       <tr> <td>16:20</td>  <td>Command-line programs</td> </tr>
       <tr> <td>16:35</td>  <td>Wrap-up </td> </tr>
